postgres/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: postgres
  name: postgres
  namespace: experimental
spec:
  type: NodePort
  ports:
   - port: 5432
  selector:
    io.kompose.service: postgres
status:
  loadBalancer: {}
